# vivarium

./: Cargo.toml  LICENSE  README.md
docs/: project_structure.md
docs/mcp/: instructions.md
examples/predator-prey/: world.yaml
examples/predator-prey/scripts/: prey_script.lua
examples/predator-prey/snapshots/2025-12-12-001/: entities.yaml  snapshot.yaml
src/: agent.rs  backboard.rs  ecs.rs  grid.rs  lib.rs  lua.rs  main.rs  message_bus.rs  object.rs  simulation.rs
src/cli/: commands.rs  init_project.rs  mod.rs  run.rs
src/core/: entity.rs  errors.rs  lua.rs  manager.rs  messaging.rs  metrics.rs  mod.rs  project_registry.rs  registry.rs  schema.rs  snapshot.rs  tests.rs  world.rs  world_config.rs
src/core/persistence/: loader.rs  mod.rs  project.rs  saver.rs  schema.rs
src/core/scripting/: traits.rs
src/core/scripting/lua/: controller.rs  convert.rs  mod.rs
src/core/snapshot/: manager.rs  mod.rs  snapshot.rs
src/core/tests/: persistence.rs  test_world_config.json  test_world_config.yaml  world.rs
src/ecs/: component.rs  messaging.rs  mod.rs  system.rs  world.rs
src/mcp/: errors.rs  mod.rs  project_store.rs  server.rs
src/mcp/tools/: metrics.rs  mod.rs  snapshots.rs  world.rs
src/simulator/: entity.rs  lua.rs  messaging.rs  mod.rs  world.rs
