[package]
name = "vivarium"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "vendored"]}
rmcp = { version = "0.8.0", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }